SimpleComplex/Validate 1.x, 2017-06-16
--------------------------------------
- Inline coded getInstance trait instead of using trait; IDE cannot resolve
  (class) return type of trait.

SimpleComplex/Validate 1.x, 2017-06-07
--------------------------------------
- name(), snakeName(), lispName(). name() now allows underscore and hyphen.

SimpleComplex/Validate 1.x, 2017-06-05
--------------------------------------
- Validate allow extending constructur to provide dependency by other means.
- Removed rule methods asciiLowerCase and asciiUpperCase. Added 'case' parameter
  to relevant rule methods instead.
- Stopped including getInstance() trait; IDE cannot resolve classes beyond
  1 level of reference.

SimpleComplex/Validate 1.x, 2017-05-31
--------------------------------------
- Use parameter type declaration when possible, despite ambiguous effect for
  method callers (coercion or TypeError).

SimpleComplex/Validate 1.x, 2017-05-27
--------------------------------------
- Removed make(); folks should use getInstance() instead.
- Added setLogger() methods, for providing logger after instantiation.
- Only one exposed (and optional) dependency: logger.

SimpleComplex/Validate 1.x, 2017-05-26
--------------------------------------
- Constructor use soft dependencies.

SimpleComplex/Validate 1.x, 2017-05-25
--------------------------------------
- Use ValidateByRules via Validate::challengeRules()
- Option errUnconditionally.
- Exceptions moved to sub namespace \Exception.
- ValidateByRules recording.

SimpleComplex/Validate 1.x, 2017-05-23
--------------------------------------
- Parameter/return type declarations.
- numeric() now returns 'integer'/'float' on pass.
- ValidateByRules new 'alternativeEnum' pseudo-rule replaces similar which only
  worked when the var was empty().

SimpleComplex/Validate 1.x, 2017-05-22
--------------------------------------
- Initial design complete, however not tested.